--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ yesBtn.addEventListener("click", () => {
     noBtn.style.display = "none";
     result.style.display = "flex";
 
-    const text = "Wiedziałem że to wybierzesz 🤍❤️";
+    const text = "Wiedziałem że to wybierzesz słodziaku 🤍❤️";
     const words = text.split(" ");
 
     words.forEach((word, index) => {
@@ -192,3 +192,4 @@ setInterval(createHeart, 200);
 
 </body>
 </html>
+
